ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -16,10 +16,19 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<!-- description -->
 		<div>
+			<h1> Ma description </h1>
 			<p>
 				Trop facile
+			</p>
+		</div>
+
+		<!-- récompense -->
+		<div>
+			<h1> Mes récompenses </h1>
+			<p>
+				WIP
 			</p>
 		</div>
 	
