Ajout d'un gist GitHub

--- a/hello.html
+++ b/hello.html
@@ -31,5 +31,12 @@
 				WIP
 			</p>
 		</div>
-	
+
+		<!-- mon gist -->
+		<div>
+			<h1> Mon gist </h1>
+			<p>
+				<script src="https://gist.github.com/Oysiss/3840b5e2a43e96fe81ff52f797708804.js"></script>
+			</p>
+		</div>
 </body></html>
