--- a/hello.html
+++ b/hello.html
@@ -39,4 +39,11 @@
 				<script src="https://gist.github.com/Oysiss/3840b5e2a43e96fe81ff52f797708804.js"></script>
 			</p>
 		</div>
+
+		<!-- commandes git -->
+		<div>
+			<h1> Mes commandes git </h1>
+			<p> git pull </p>
+		</div>
+
 </body></html>
